fix Header to top of page, wrap main content in Container, update styles

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -9,3 +9,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.appContainer {
+  height: 100%;
+  margin-top: 50px;
+  margin-bottom: 40px;
+}
