--- a/src/client/styles/AccountPage.css
+++ b/src/client/styles/AccountPage.css
@@ -1,6 +1,6 @@
 .AccountPage {
   padding-top: 50px;
-  padding-bottom: 200px;
+  padding-bottom: 120px;
 }
 
 .AccountPage .heading {
